<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="messgae">You choose true</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="question_anstralia">堪培拉是澳大利亚的首都</string>
    <string name="question_ocean">太平洋比大洋洲大</string>
    <string name="question_mideast">苏伊士运河连接红海和印度洋</string>
    <string name="question_africa">尼罗河的源头是埃及</string>
    <string name="question_americas">亚马逊河是美洲最长的河</string>
    <string name="question_asia">贝加尔湖是世界上最古老最深的淡水湖</string>
    <string name="correct_toast">正确!</string>
    <string name="incorrect_toast">错误!</string>
    <string name="warning_text">你想这么做吗？</string>
    <string name="show_answer_button">显示答案</string>
    <string name="cheat_button">作弊</string>
    <string name="judgment_toast">作弊是不对的</string>
    <string name="start_answer">开始答题</string>
    <string name="add_question">新增题目</string>
</resources>
